--- a/src/app/default/default.page.html
+++ b/src/app/default/default.page.html
@@ -18,7 +18,7 @@
     </ion-card-content>
   </ion-card>
 
-  <ion-button expand="full" (click)="navigateToDeckEditor()">Deck Editor</ion-button>
+  <ion-button expand="full" (click)="navigateToDeckList()">Deck List</ion-button>
   <ion-button expand="full" (click)="navigateToSimilarGame()">Game</ion-button>
   <ion-button expand="full" (click)="navigateToCardSearch()">Card Search</ion-button>
   <ion-button expand="full" (click)="logout()">Logout</ion-button>
