--- a/src/app/default/default.page.scss
+++ b/src/app/default/default.page.scss
@@ -44,8 +44,8 @@ ion-list {
 
 ion-item {
   --background: transparent;
-  --border-color: #FFD700;
-  border-bottom: 2px solid #FFD700;
+  --border-color: transparent; /* Remove default border color */
+  border-bottom: 2px solid #FFD700; /* Custom golden border */
   color: white;
   font-size: 16px;
   text-align: center;
