--- a/src/app/game/game.page.html
+++ b/src/app/game/game.page.html
@@ -52,5 +52,5 @@
   
 
   <ion-button expand="full" (click)="savePlayerDeck()">Save Player Deck</ion-button>
-  <ion-button expand="full" (click)="simulateDuel()">Simulate Duel</ion-button>
+  <ion-button expand="full" (click)="simulateDuel()">Let's Duel</ion-button>
 </ion-content>
