--- a/src/app/game-board/game-board.page.html
+++ b/src/app/game-board/game-board.page.html
@@ -61,11 +61,10 @@
     <div class="game-content">
       <!-- Opponent's Hand -->
       <div class="game-area">
-        <h2>Opponent's Hand</h2>
         <div class="monster-cards">
           <div *ngFor="let card of opponentHand" class="monster-card">
             <ion-thumbnail slot="start">
-              <img src="assets/images/sleeves.jpg" alt="Card Back" />
+              <img class="card-image" src="assets/images/sleeves.jpg" alt="Card Back" />
             </ion-thumbnail>
           </div>
         </div>
@@ -73,11 +72,10 @@
 
       <!-- Opponent's Field -->
       <div class="game-area">
-        <h2>Opponent's Field</h2>
         <div class="monster-cards">
           <div *ngFor="let card of opponentMonsterCards" class="monster-card" [attr.data-card-id]="card.id">
             <ion-thumbnail>
-              <img [src]="card?.card_images[0]?.image_url" alt="{{ card?.name }}" />
+              <img class="card-image" [src]="card?.card_images[0]?.image_url" alt="{{ card?.name }}" />
             </ion-thumbnail>
             <ion-label>{{ card?.name }}</ion-label>
             <ion-button (click)="selectTarget(card)">Select Target</ion-button>
@@ -91,7 +89,7 @@
         <div class="monster-cards">
           <div *ngFor="let card of playerMonsterCards" class="monster-card" [attr.data-card-id]="card.id" [ngClass]="{ 'boosted-card': card.isBoosted }">
             <ion-thumbnail>
-              <img [src]="card?.card_images[0]?.image_url" alt="{{ card?.name }}" />
+              <img class="card-image" [src]="card?.card_images[0]?.image_url" alt="{{ card?.name }}" />
             </ion-thumbnail>
             <ion-label>{{ card?.name }}</ion-label>
             <p *ngIf="card.isBoosted">🔥 Boosted!</p>
@@ -107,6 +105,7 @@
           <div *ngFor="let card of playerHand" class="monster-card" [ngClass]="{ 'boosted-card': card.isBoosted }">
             
               <img
+                class="card-image"
                 [src]="card?.card_images[0]?.image_url"
                 alt="{{ card?.name }}"
               />
