--- a/src/app/game-board/game-board.page.scss
+++ b/src/app/game-board/game-board.page.scss
@@ -62,6 +62,7 @@
           text-align: center;
           position: relative;
 
+
           &:hover{
             ion-button{
               display: block;
@@ -101,6 +102,8 @@
   height: 100%; /* Ensure full height */
   object-fit: cover; /* Avoid distortion */
   border-radius: 8px; /* Rounded corners */
+  display: center; /* Block display for proper sizing */
+  margin: 0 auto; /* Center the image */
 }
 
 ion-content {
