fixing some small css problems

--- a/src/app/game/game.page.html
+++ b/src/app/game/game.page.html
@@ -4,6 +4,7 @@
   </ion-toolbar>
 </ion-header>
 
+<ion-button expand="full" (click)="goHome()">Home</ion-button>
 <ion-button expand="full" (click)="navigateToDeckEditor()">Deck Editor</ion-button>
 <ion-button expand="full" (click)="navigateToCardSearch()">Card Search</ion-button>
 
