--- a/src/app/default/default.page.html
+++ b/src/app/default/default.page.html
@@ -7,7 +7,7 @@
 <ion-content class="ion-padding">
   <ion-card>
     <ion-card-header>
-      <ion-card-title>Logged-in Accounts</ion-card-title>
+      <ion-card-title>User:</ion-card-title>
     </ion-card-header>
     <ion-card-content>
       <ion-list>
