--- a/src/app/default/default.page.html
+++ b/src/app/default/default.page.html
@@ -20,6 +20,6 @@
 
   <ion-button expand="full" (click)="navigateToDeckList()">Deck List</ion-button>
   <ion-button expand="full" (click)="navigateToSimilarGame()">Game</ion-button>
-  <ion-button expand="full" (click)="navigateToCardSearch()">Card Search</ion-button>
+  <ion-button expand="full" (click)="navigateToCardSearch()">The Card Chronicles</ion-button>
   <ion-button expand="full" (click)="logout()">Logout</ion-button>
 </ion-content>
