--- a/src/app/card-search/card-search.page.html
+++ b/src/app/card-search/card-search.page.html
@@ -11,7 +11,7 @@
 <ion-content class="ion-padding">
   <!-- Card Search Content -->
   <ion-row>
-    <ion-col size="6">
+    <ion-col size="12">
       <h2>The Card Chronicles</h2>
     </ion-col>
   </ion-row>
@@ -21,6 +21,7 @@
     {{ showFilters ? 'Hide Filters' : 'Show Filters' }}
   </ion-button>
 
+  <!-- Search Input -->
   <ion-item>
     <ion-input
       [(ngModel)]="searchTerm"
@@ -60,21 +61,27 @@
     <ion-button expand="full" color="medium" (click)="resetFilters()">Reset Filters</ion-button>
   </div>
 
+  <!-- Error Message -->
   <ion-text color="danger" *ngIf="error">
     <p>{{ error }}</p>
   </ion-text>
 
+  <!-- Loading Spinner -->
   <ion-spinner *ngIf="loading" name="dots"></ion-spinner>
 
+  <!-- Card Grid -->
   <ion-grid>
     <ion-row>
       <ion-col *ngFor="let card of filteredCards" size="12" size-md="6" size-lg="4">
         <ion-card (click)="toggleCardDetails(card)">
-          <img [src]="card.imageUrl" [alt]="card.name" />
-          <ion-card-header>
-            <ion-card-title>{{ card.name }}</ion-card-title>
-          </ion-card-header>
+          <!-- Card Image -->
+          <img *ngIf="!card.showDetails" [src]="card.imageUrl" [alt]="card.name" />
+  
+          <!-- Card Details -->
           <ion-card-content *ngIf="card.showDetails">
+            <ion-card-header>
+              <ion-card-title>{{ card.name }}</ion-card-title>
+            </ion-card-header>
             <p><strong>Type:</strong> {{ card.type }}</p>
             <p><strong>Race:</strong> {{ card.race }}</p>
             <p *ngIf="card.archetype"><strong>Archetype:</strong> {{ card.archetype }}</p>
