--- a/src/app/game-board/game-board.page.html
+++ b/src/app/game-board/game-board.page.html
@@ -108,13 +108,33 @@
   </div>
 
   <!-- Deck Visualization -->
-  <div class="deck-visualization">
-    <div class="deck-info" (click)="onDeckClick()">
-      <img src="assets/images/deck holder.jpg" alt="Deck" class="deck-image" />
-      <p>{{ playerDeck.length }} cards left</p>
+    <div class="deck-visualization">
+      <div class="deck-info" (click)="onDeckClick()">
+        <img src="assets/images/deck holder.jpg" alt="Deck" class="deck-image" />
+        <p>{{ playerDeck.length }} cards left</p>
+      </div>
+    </div>
+
+      <!-- Graveyard Section -->
+    <div class="graveyard" (click)="showGraveyard()">
+      <h3>Graveyard</h3>
+      <p>{{ graveyard.length }} cards</p> <!-- Show the number of cards in the graveyard -->
+    </div>
+
+    <!-- Graveyard Modal -->
+    <div *ngIf="graveyardModalVisible" class="graveyard-modal">
+      <div class="modal-content">
+        <h3>Graveyard</h3>
+        <div class="modal-cards">
+          <div *ngFor="let card of graveyard" class="modal-card">
+            <img [src]="card.imageUrl" [alt]="card.name" class="modal-card-image" />
+            <p>{{ card.name }}</p>
+          </div>
+        </div>
+        <button class="close-button" (click)="closeGraveyard()">Close</button>
+      </div>
     </div>
   </div>
-</div>
 
     <div class="game-content">
       <!-- Opponent's Hand -->
